# Voxel-game-Rust

./: Cargo.toml  README.md  fragment.glsl  vertex.glsl
src/: camera.rs  input.rs  main.rs  shader.rs  shader_program.rs  window.rs
