[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = { version="~0.52.0", features = ["image", "vulkan"] }
image = "0.24.6"
nalgebra-glm = "0.18.0"
memoffset = "0.8"